--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,6 @@
+a{
+    text-decoration: none;
+}
 .form-container {
     display: flex;
     flex-direction: column;
@@ -24,3 +27,38 @@
 .hr-line{
     width: 100%;
 }
+
+.item-tour{
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    max-width: 380px;
+}
+.item-tour-image img{
+    width: 360px;
+    height: 240px;
+    border-radius: 8px;
+}
+
+/* Slide */
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+/*  */
