--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+}
+
 a{
     text-decoration: none;
 }
@@ -31,17 +41,38 @@ a{
     width: 100%;
 }
 
+.list-tour{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+}
 .item-tour{
-    border: 1px solid #ccc;
     border-radius: 8px;
-    padding: 10px;
-    max-width: 380px;
+    background-color: #e9ecef;
+
+}
+.item-tour-image {
+    width: 400px;
+    background-size: contain !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-color: #dfdfdf !important;
+    border-radius: 8px;
+    aspect-ratio: 1.91 !important;
+    position: relative;
+    overflow: hidden;
 }
 .item-tour-image img{
-    width: 360px;
-    height: 240px;
-    border-radius: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transform: translate(-50%, -50%);
 }
+
 
 /* Slide */
 .swiper {
@@ -80,7 +111,6 @@ a{
 .image-top{
     width: 100%;
     max-height: 500px;
-    opacity: 0.8;
 }
 .form-search{
     position: absolute;
@@ -144,14 +174,49 @@ a{
 footer {
     background-color: #d7e0ff;
     color: #fff;
-    padding: 20px 0;
+    padding: 10px 0;
+    margin: 0 auto;
+     width: 100%;
 }
 
 .footer-content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     margin: 0 auto;
     padding: 0 20px;
+}
+
+.btn-book-now {
+    display: inline-block;
+    padding: 10px 20px; /* Khoảng cách bên trong nút */
+    font-size: 16px; /* Kích thước chữ */
+    font-weight: bold; /* Đậm chữ */
+    color: #fff; /* Màu chữ trắng */
+    background-color: #007bff; /* Màu nền xanh */
+    border: none; /* Không viền */
+    border-radius: 5px; /* Bo góc */
+    text-align: center; /* Căn giữa chữ */
+    text-decoration: none; /* Không gạch chân */
+    cursor: pointer; /* Con trỏ chuột thành tay */
+    transition: background-color 0.3s ease; /* Hiệu ứng chuyển đổi màu nền */
+}
+
+.btn-book-now:hover {
+    background-color: #0056b3; /* Màu nền khi hover */
+}
+
+.btn-book-now:active {
+    background-color: #004494; /* Màu nền khi nhấn */
+}
+
+.btn-book-now:focus {
+    outline: none; /* Bỏ viền focus mặc định */
+    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5); /* Thêm shadow khi focus */
+}
+
+.btn-add-image{
+    cursor: pointer;
 }
