--- a/public/css/app.css
+++ b/public/css/app.css
@@ -313,3 +313,18 @@ footer {
     background-color:#e3e7ed;
     padding: 20px 0;
 }
+
+.avatar {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+.img-avatar {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
