fix: bank & dateTours

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,11 @@ html, body {
     height: 100%;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 .truncate-2-line {
     display: -webkit-box;
     -webkit-box-orient: vertical;
@@ -30,12 +35,13 @@ a{
     align-items: center;
 }
 .btn-login{
-    background-color: #008768;
+    background-color: #131142;
     border-radius: 8px;
+    height: 40px;
     border: none;
 }
 .btn-login:hover {
-    background-color: #09e2af;
+    background-color:  #05009d;
 }
 
 .btn-icon{
@@ -60,7 +66,7 @@ a{
 .item-tour{
     border-radius: 8px;
     background-color: #e9ecef;
-    min-height: 480px;
+    min-height: 450px;
 
 }
 .item-tour-image {
@@ -82,8 +88,12 @@ a{
     height: 100%;
     object-fit: contain;
     transform: translate(-50%, -50%);
+    transition: transform 0.3s ease; /* Add transition for smooth zoom effect */
 }
 
+.item-tour:hover .item-tour-image img {
+    transform: translate(-50%, -50%) scale(1.1);
+}
 
 /* Slide */
 .swiper {
@@ -402,3 +412,43 @@ footer {
 }
 
 /*  */
+
+.text-header{
+    padding: 5px 10px;
+    border-radius: 8px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.text-header:hover{
+    background-color: #131142;
+    color: white;
+}
+
+.avatar_hover {
+    transition: transform 0.1s ease-in-out;
+}
+
+.avatar_hover:hover {
+    transform: scale(1.1);
+}
+
+.image-list .item-image-top {
+    display: block;
+    overflow: hidden;
+    position: relative;
+}
+
+.image-list .item-image-top img {
+    transition: transform 0.3s ease-in-out;
+    display: block;
+}
+
+.image-list .item-image-top:hover img {
+    transform: scale(1.2);
+}
+
+
+.table th {
+    vertical-align: top;
+}
+
